--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,21 +21,63 @@
     <h1>Hello, world! again</h1>
 	<div class="container-fluid">
 	  <div class="row">
-		<div class=".col-md-12" align="center">Header</div>
+		<div class="col-md-12" align="center">Header</div>
 	  </div>
 	  <div class="row">
-		<div class=".col-md-12" align="center">Content
-			<div> class="row">
-				<div class=".col-md-12">MessageBox</div>
-				<div class=".col-md-12">MessageBox</div>	
-				<div class=".col-md-12">MessageBox</div>
-				<div class=".col-md-12">MessageBox</div>
-				<div class=".col-md-12">MessageBox</div>				
+		<div class="col-md-1"></div>
+		<div class="col-md-10 myclass" align="center">Content			
+			<div class="row " style="">
+				<div class="col-md-12 messagebox">
+					<div class="row messagebox_header">
+						<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
+						<div class="col-md-3" align="center":>user: annomyous</div>
+						<div class="col-md-3" align="right">location: Amsterdam </div>
+						<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
+					</div>	
+					<div class="row">
+						<div class="col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
+					</div>
+					<div class="row messagebox_buttons">
+						<div class="col-md-6 like" align="center">Like</div>
+						<div class="col-md-6 dislike" align="center">Dislike</div>
+					</div>
+				</div>
+				<div class="col-md-12 messagebox">
+					<div class="row">
+						<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
+						<div class="col-md-4" align="center":>user: annomyous</div>
+						<div class="col-md-4" align="right">location: Amsterdam </div>
+					</div>	
+					<div class="row">
+						<div class="col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
+					</div>
+					<div class="row messagebox_buttons">
+						<div class="col-md-6 like" align="center">Like</div>
+						<div class="col-md-6 dislike" align="center">Dislike</div>
+					</div>
+				</div>	
+				<div class="col-md-12 messagebox">
+					<div class="row">
+						<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
+						<div class="col-md-4" align="center":>user: annomyous</div>
+						<div class="col-md-4" align="right">location: Amsterdam </div>
+					</div>	
+					<div class="row">
+						<div class="col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
+					</div>
+					<div class="row messagebox_buttons">
+						<div class="col-md-6 like" align="center">Like</div>
+						<div class="col-md-6 dislike" align="center">Dislike</div>
+					</div>
+				</div>	
+				<div class="col-md-12 messagebox">MessageBox</div>
+				<div class="col-md-12 messagebox">MessageBox</div>				
 			</div>
 		</div>
-	  </div>
+		<div class="col-md-1"></div>
+	</div>
 	  <div class="row">
-		<div class=".col-md-8" align="center">Footer</div>
+		<div class="col-md-8" align="center">Footer</div>
 	  </div>
 	</div>
 
