--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<div class="col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
 					</div>
 					<div class="row messagebox_buttons">
-						<div class="col-md-6 like" align="center">Like</div>
-						<div class="col-md-6 dislike" align="center">Dislike</div>
+						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
 					</div>
 				</div>
 				<div class="col-md-12 messagebox">
@@ -52,8 +52,8 @@
 						<div class="col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
 					</div>
 					<div class="row messagebox_buttons">
-						<div class="col-md-6 like" align="center">Like</div>
-						<div class="col-md-6 dislike" align="center">Dislike</div>
+						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
 					</div>
 				</div>	
 				<div class="col-md-12 messagebox">
@@ -66,8 +66,8 @@
 						<div class="col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
 					</div>
 					<div class="row messagebox_buttons">
-						<div class="col-md-6 like" align="center">Like</div>
-						<div class="col-md-6 dislike" align="center">Dislike</div>
+						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
 					</div>
 				</div>	
 				<div class="col-md-12 messagebox">MessageBox</div>
