--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world! again</h1>
 	<div class="container-fluid">
-	  <div class="row">
+	  <div class="row" style="height:10%">
 		<div class="col-md-12" align="center">Header</div>
 	  </div>
-	  <div class="row">
+	  <div class="row" style="height:80%;overflow-y: scroll; ">
 		<div class="col-md-1"></div>
-		<div class="col-md-10 myclass" align="center">Content			
-			<div class="row " style="">
+		<div class="col-md-10 myclass" align="center">			
+			<div class="row " >
 				<div class="col-md-12 messagebox">
 					<div class="row messagebox_header">
 						<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
@@ -76,14 +75,21 @@
 		</div>
 		<div class="col-md-1"></div>
 	</div>
+		
+	<div id="footer" style="background-color:WHITE;width:100%;margin:0px;" style="height:10%">
 	  <div class="row">
-		<div class="col-md-8" align="center">Footer</div>
+		<div class="col-md-8" align="center" style="cursor:pointer;" ontouchstart="slideDiv('m')" onclick="slideDiv('LiveQuotiontionBox_1')" >SHOUT</div>
+		<div id="LiveQuotiontionBox_1" style="display:none; margin-top:5px;">asdasdasdasdad</div>	
 	  </div>
-	</div>
-
+	<div>
+	  
+	<div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="js/jquery-ui-1.10.4.custom.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+      <script src="js/custom.js"></script>
   </body>
 </html>
