--- a/index.html
+++ b/index.html
@@ -18,72 +18,72 @@
     <![endif]-->
   </head>
   <body>
-	<div class="container-fluid">
-	  <div class="row" style="height:10%">
-		<div class="col-md-12" align="center">Header</div>
-	  </div>
-	  <div class="row" style="height:80%;overflow-y: scroll; ">
-		<div class="col-md-1"></div>
-		<div class="col-md-10 myclass" align="center">			
-			<div class="row " >
-				<div class="col-md-12 messagebox">
-					<div class="row messagebox_header">
-						<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
-						<div class="col-md-3" align="center":>user: annomyous</div>
-						<div class="col-md-3" align="right">location: Amsterdam </div>
-						<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
-					</div>	
-					<div class="row">
-						<div class="col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
-					</div>
-					<div class="row messagebox_buttons">
-						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
-						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
-					</div>
-				</div>
-				<div class="col-md-12 messagebox">
-					<div class="row">
-						<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
-						<div class="col-md-4" align="center":>user: annomyous</div>
-						<div class="col-md-4" align="right">location: Amsterdam </div>
-					</div>	
-					<div class="row">
-						<div class="col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
-					</div>
-					<div class="row messagebox_buttons">
-						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
-						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
-					</div>
-				</div>	
-				<div class="col-md-12 messagebox">
-					<div class="row">
-						<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
-						<div class="col-md-4" align="center":>user: annomyous</div>
-						<div class="col-md-4" align="right">location: Amsterdam </div>
-					</div>	
-					<div class="row">
-						<div class="col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
-					</div>
-					<div class="row messagebox_buttons">
-						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
-						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
-					</div>
-				</div>	
-				<div class="col-md-12 messagebox">MessageBox</div>
-				<div class="col-md-12 messagebox">MessageBox</div>				
-			</div>
+ 
+
+		<div class="row" style="">
+			<div class="col-xs-12 col-md-12" align="center" style="background-color:BLACK;">Header</div>
 		</div>
-		<div class="col-md-1"></div>
-	</div>
-		
-	<div id="footer" style="background-color:WHITE;width:100%;margin:0px;" style="height:10%">
+
+	  <div class="row" style="overflow-y:scroll;">
+			<div class="col-xs-12 col-md-12 myclass" align="center">			
+				<div class="row">
+					<div class="col-xs-12 col-md-12 messagebox">
+						<div class="row messagebox_header">
+							<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
+							<div class="col-md-3" align="center":>user: annomyous</div>
+							<div class="col-md-3" align="right">location: Amsterdam </div>
+							<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
+						</div>	
+						<div class="row">
+							<div class="col-xs-12 col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
+						</div>
+						<div class="row messagebox_buttons">
+							<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+							<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-12 messagebox">
+						<div class="row">
+							<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
+							<div class="col-md-4" align="center":>user: annomyous</div>
+							<div class="col-md-4" align="right">location: Amsterdam </div>
+						</div>	
+						<div class="row">
+							<div class="col-xs-12 col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
+						</div>
+						<div class="row messagebox_buttons">
+							<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+							<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
+						</div>
+					</div>	
+					<div class="col-xs-12 col-md-12 messagebox">
+						<div class="row">
+							<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
+							<div class="col-md-4" align="center":>user: annomyous</div>
+							<div class="col-md-4" align="right">location: Amsterdam </div>
+						</div>	
+						<div class="row">
+							<div class="col-xs-12 col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
+						</div>
+						<div class="row messagebox_buttons">
+							<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+							<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
+						</div>
+					</div>	
+					<div class="col-xs-12 col-md-12 messagebox">MessageBox</div>
+					<div class="col-xs-12 col-md-12 messagebox">MessageBox</div>				
+				</div>
+			</div>
+	  </div> 
+
+	<nav class="navbar-wrapper navbar-default navbar-fixed-bottom" role="navigation">
 	  <div class="row">
-		<div class="col-md-8" align="center" style="cursor:pointer;" ontouchstart="slideDiv('m')" onclick="slideDiv('LiveQuotiontionBox_1')" >SHOUT</div>
+		<div class="col-xs-12 col-md-12" align="center" style="cursor:pointer;" ontouchstart="slideDiv('m')" onclick="slideDiv('LiveQuotiontionBox_1')" >SHOUT</div>
 		<div id="LiveQuotiontionBox_1" style="display:none; margin-top:5px;">asdasdasdasdad</div>	
 	  </div>
-	<div>
-	  
-	<div>
+	</nav>
+
+	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
