--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
@@ -17,10 +17,9 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
- 
+  <body style="overflow-x:hidden">
 
-		<div class="row" style="">
+		<div class="row" style="overflow-y:scroll;">
 			<div class="col-xs-12 col-md-12" align="center" style="background-color:BLACK;">Header</div>
 		</div>
 
@@ -44,9 +43,9 @@
 					</div>
 					<div class="col-xs-12 col-md-12 messagebox">
 						<div class="row">
-							<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
-							<div class="col-md-4" align="center":>user: annomyous</div>
-							<div class="col-md-4" align="right">location: Amsterdam </div>
+							<div class="col-md-2" align="left">Time: 22:36 - 33 min ago</div>
+							<div class="col-md-2" align="center":>user: annomyous</div>
+							<div class="col-md-2" align="right">location: Amsterdam </div>
 						</div>	
 						<div class="row">
 							<div class="col-xs-12 col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
