--- a/index.html
+++ b/index.html
@@ -17,44 +17,31 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body style="overflow-x:hidden">
-
-		<div class="row" style="overflow-y:scroll;">
-			<div class="col-xs-12 col-md-12" align="center" style="background-color:BLACK;">Header</div>
-		</div>
-
-	  <div class="row" style="overflow-y:scroll;">
-			<div class="col-xs-12 col-md-12 myclass" align="center">			
-				<div class="row">
-					<div class="col-xs-12 col-md-12 messagebox">
-						<div class="row messagebox_header">
-							<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
-							<div class="col-md-3" align="center":>user: annomyous</div>
-							<div class="col-md-3" align="right">location: Amsterdam </div>
-							<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
-						</div>	
-						<div class="row">
-							<div class="col-xs-12 col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
-						</div>
-						<div class="row messagebox_buttons">
-							<div class="col-xs-6 col-md-6 like" align="center">Like</div>
-							<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-md-12 messagebox">
-						<div class="row">
-							<div class="col-md-2" align="left">Time: 22:36 - 33 min ago</div>
-							<div class="col-md-2" align="center":>user: annomyous</div>
-							<div class="col-md-2" align="right">location: Amsterdam </div>
-						</div>	
-						<div class="row">
-							<div class="col-xs-12 col-md-12 messagebox_content"><img src="img/test.jpg" height="280px"></img></div>
-						</div>
-						<div class="row messagebox_buttons">
-							<div class="col-xs-6 col-md-6 like" align="center">Like</div>
-							<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
-						</div>
+  <body style="overflow-x:hidden;width:100%;height:100%">
+	<div class="container-fluid" style="height:100%">
+	<div class="row" style="height:5%">
+		<div class="col-xs-12 col-md-12" align="center" style="background-color:WHITE;height:100%;">Header</div>
+	</div>
+	<div class="row myclass" style="height:95%">
+			<div class="row"  >
+				<div class="col-xs-12 col-md-12 messagebox">
+					<div class="row messagebox_header">
+						<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
+						<div class="col-md-3" align="center":>user: annomyous</div>
+						<div class="col-md-3" align="right">location: Amsterdam </div>
+						<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
 					</div>	
+					<div class="row">
+						<div class="col-xs-12 col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
+					</div>
+					<div class="row messagebox_buttons">
+						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row"  >
 					<div class="col-xs-12 col-md-12 messagebox">
 						<div class="row">
 							<div class="col-md-4" align="left">Time: 22:36 - 33 min ago</div>
@@ -69,16 +56,80 @@
 							<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
 						</div>
 					</div>	
-					<div class="col-xs-12 col-md-12 messagebox">MessageBox</div>
-					<div class="col-xs-12 col-md-12 messagebox">MessageBox</div>				
+			</div>
+			<div class="row"  >
+				<div class="col-xs-12 col-md-12 messagebox">
+					<div class="row messagebox_header">
+						<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
+						<div class="col-md-3" align="center":>user: annomyous</div>
+						<div class="col-md-3" align="right">location: Amsterdam </div>
+						<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
+					</div>	
+					<div class="row">
+						<div class="col-xs-12 col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
+					</div>
+					<div class="row messagebox_buttons">
+						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
+					</div>
+				</div>
+			</div>	
+			<div class="row"  >
+				<div class="col-xs-12 col-md-12 messagebox">
+					<div class="row messagebox_header">
+						<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
+						<div class="col-md-3" align="center":>user: annomyous</div>
+						<div class="col-md-3" align="right">location: Amsterdam </div>
+						<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
+					</div>	
+					<div class="row">
+						<div class="col-xs-12 col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
+					</div>
+					<div class="row messagebox_buttons">
+						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
+					</div>
 				</div>
 			</div>
-	  </div> 
-
+			<div class="row"  >
+				<div class="col-xs-12 col-md-12 messagebox">
+					<div class="row messagebox_header">
+						<div class="col-md-3" align="left">Time: 22:36 - 33 min ago</div>
+						<div class="col-md-3" align="center":>user: annomyous</div>
+						<div class="col-md-3" align="right">location: Amsterdam </div>
+						<div class="col-md-3" align="right">Likes: 11 | Dislike: 2 </div>
+					</div>	
+					<div class="row">
+						<div class="col-xs-12 col-md-12" align="left">contentasd sada<br>asdasdasdasdasdadasdasd<br>asdasdasdasdasdsds</div>
+					</div>
+					<div class="row messagebox_buttons">
+						<div class="col-xs-6 col-md-6 like" align="center">Like</div>
+						<div class="col-xs-6 col-md-6 dislike" align="center">Dislike</div>
+					</div>
+				</div>
+			</div>				
+		
+	</div> 
+	</div>
 	<nav class="navbar-wrapper navbar-default navbar-fixed-bottom" role="navigation">
 	  <div class="row">
-		<div class="col-xs-12 col-md-12" align="center" style="cursor:pointer;" ontouchstart="slideDiv('m')" onclick="slideDiv('LiveQuotiontionBox_1')" >SHOUT</div>
-		<div id="LiveQuotiontionBox_1" style="display:none; margin-top:5px;">asdasdasdasdad</div>	
+		<div id="btnShout" class="col-xs-12 col-md-12" align="center" style="cursor:pointer;" ontouchstart="slideDiv('m')" onclick="slideDiv('LiveQuotiontionBox_1')" >SHOUT</div>
+		<div id="LiveQuotiontionBox_1" style="display:none; margin-top:5px;">
+			<div class="row">
+			<div class="col-xs-12 col-md-12">Bericht:<div>
+			</div>
+			
+			<div class="row">
+				<div class="col-xs-12 col-md-12" style="padding:10px">
+					<textarea class="form-control" rows="3"></textarea>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-12">
+					<button type="button" class="btn btn-default" style="width:100%">Submit</button>
+				</div>
+			</div>
+		</div>	
 	  </div>
 	</nav>
 
