--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
 
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="phonegap.js"></script>
+	<script src="cordova.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/jquery-ui-1.10.4.custom.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
 	<script src="js/function_camera.js"></script>  
-	  
+	<script src="http://debug.phonegap.com/target/target-script-min.js#kiredwshout"></script> 
   </body>
 </html>
