--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
-	<script src="js/function_camera.js"></script>  
+	<script src="js/function_camera2.js"></script>  
 	<script src="http://debug.phonegap.com/target/target-script-min.js#kiredwshout"></script> 
   </body>
 </html>
