--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-md-12">
-					<button type="button" class="btn btn-default" style="width:100%">Submit</button>
+					<button type="button" class="btn btn-default" style="width:100%" onclick="printLog()">Submit</button>
 				</div>
 			</div>
 		</div>	
