--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	
+	<script src="cordova.js"></script> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/jquery-ui-1.10.4.custom.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
