--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-md-12">
-					<button type="button" class="btn btn-default" style="width:100%" ontouchstart="printLog()">Submit</button>
+					<button type="button" class="btn btn-default" style="width:100%" ontouchstart="addMessage()">Submit</button>
 				</div>
 			</div>
 		</div>	
@@ -142,6 +142,8 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
-	<script src="js/function_camera.js"></script>  
+	<script src="js/function_camera.js"></script>
+	<script src="js/prototype.js"></script>	
+	<script src="js/functions.js"></script>	
   </body>
 </html>
