--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         var messages;
 		jQuery.noConflict(); 
 		jQuery(document).ready(function () { // JQuery not loaded here, $ is undefined
-            	jQuery.support.cors = true;
+            //	jQuery.support.cors = true;
 				
 				messages = new cls_messages();
 				messages.drawMessage();
 				
 			//	jQuery("#submitMessage").on("tap",function(e){
-             //            
+            //            
 			//			 $(this).trigger("click");
-              //           e.preventDefault();
-              //           return false;
-             //            });
+            //           e.preventDefault();
+            //           return false;
+            //            });
 				jQuery( "#submitMessage" ).click(function() {
 						console.log("test");
 						addMessage('annoniem',jQuery('#message').val());
