--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
 				jQuery( "#submitMessage" ).click(function() {
 						var message = new cls_message();
 						message.setMessage('','annoniem','#ASD',jQuery('#message').val(),'','','','Amsterdam');
-						SoftKeyboard.show();
 						addMessage(message);
+				});
+				jQuery( ".buttonlikes" ).click(function() {
+						console.log(this.id);
+						//alert();
+						
+						//var message = new cls_message();
+						//message.setMessage('','annoniem','#ASD',jQuery('#message').val(),'','','','Amsterdam');
+						//addMessage(message);
 				});
         });
 		</script>
